# common_robotframe

./: CMakeLists.txt  LICENSE  README.md  compile.sh  robotConfig.h.in
depend/depend_lib_src/json_so/: README.md
depend/ubuntu16_x86/: buildSoftconnection.sh  libavformat.so.58  libavutil.so.56  libhiredis.so.0.13  libmosquitto.so.1.4.15  libswresample.so.3  libswscale.so.5  libva-drm.so.1.3900.0  libva-x11.so.1.3900.0
src/centre/: CMakeLists.txt  CentralPMCallback.cpp  Centremanage.cpp  Centremanage.h  centre_common.h
src/componentLib/: README.txt
src/componentLib/algorithm/: AlgorithmCallback.cpp  AlgorithmManage.cpp  AlgorithmManage.h  CMakeLists.txt  GeneralAlgorithm.cpp  GeneralAlgorithm.h  GridMap.cpp  GridMap.h  algorithm_common.h
src/componentLib/database/: CMakeLists.txt  DBCallback.cpp  ExecuteDBCb.cpp  ExecuteDBCb.h  db_common.h
src/componentLib/generalAbility/: CMakeLists.txt  GeneralAbility.cpp  GeneralAbility.h  GeneralAbilityCallback.cpp  GeneralAbilityCommon.h  GlCommonFunc.cpp  GlCommonFunc.h
src/componentLib/generalAbility/config/: robotConfig.xml
src/componentLib/http/: CMakeLists.txt  HttpCallback.cpp  HttpCb.cpp  HttpCb.h  cloudConfig.xml  httpCommon.h
src/componentLib/mqttClient/: CMakeLists.txt  MqttCallback.cpp  MqttCb.cpp  MqttCb.h  MsgFromCloud.cpp  MsgFromCloud.h  MsgToCloud.cpp  MsgToCloud.h  mqttCommon.h
src/componentLib/navicat/: CMakeLists.txt  NavicatCallback.cpp  NavicatCb.cpp  NavicatCb.h  NavicatImpl.cpp  NavicatImpl.h  navicat_common.h
src/componentLib/pushRtmp/: CMakeLists.txt  PushRtmp.cpp  PushRtmp.h  PushRtmpCallback.cpp  PushRtmpManage.cpp  PushRtmpManage.h  pushCommon.h
src/componentLib/stateManager/: CMakeLists.txt  RobotState.cpp  RobotState.h  RobotStateManage.cpp  RobotStateManage.h  StateManagerCallback.cpp  robotstate_common.h
src/componentLib/taskCommon/: CMakeLists.txt  Interface.h  MobileRobot.cpp  MobileRobot.h  TaskCommon.cpp  TaskCommon.h  TaskCommonCallback.cpp  taskcommoninc.h
src/componentLib/taskScheduler/: CMakeLists.txt  TaskScheduler.cpp  TaskScheduler.h  TaskSchedulerCallback.cpp  TaskSchedulerCommon.h
src/componentLib/telnetServer/: AdminCmdServer.hpp  CMakeLists.txt  ServerCb.hpp  ServerImpl.cpp  ServerImpl.h  TelnetSerCallback.cpp  telnetCommon.h
src/componentLib/websocketServer/: CMakeLists.txt  RobotControl.cpp  RobotControl.h  UdpClientWs.cpp  UdpClientWs.h  UdpServerWs.cpp  UdpServerWs.h  WebsocketSerCallback.cpp  WebsocketSerManage.cpp  WebsocketSerManage.h  WebsocketServer.cpp  WebsocketServer.h  websocketConfig.xml  websocketServerCommon.h
src/globalinclude/common/: MsgCallback.h  RobotBusiness.h  basecommon.h  commondefine.h  mapdefine.h  robotConfig.h  taskdefine.h
src/globalinclude/commonFunc/: CImage.hpp  FfmpegEncode.hpp  GetFormatTime.hpp  Guard.hpp  HandleString.hpp  PushCamera.hpp  README.txt  Spdlogger.hpp  SystemCheck.hpp  ThreadPool.hpp  Timer.hpp  TimingRun.hpp  UdpRecvSend.hpp  XmlConfigAccess.hpp
src/globalinclude/sdkCallback/: AlgorithmCallback.h  CentralPMCallback.h  DBCallback.h  GeneralAbilityCallback.h  HttpCallback.h  MqttCallback.h  NavicatCallback.h  PushRtmpCallback.h  README.txt  StateManagerCallback.h  TaskCommonCallback.h  TaskSchedulerCallback.h  TelnetSerCallback.h  TestRobotCallback.h  WebsocketSerCallback.h
src/main/: CMakeLists.txt  main.cpp  powerBoot.sh  start.sh
src/robot/: README.txt
src/robot/test_robot/: CMakeLists.txt  TestRobotBusiness.cpp  TestRobotBusiness.h  TestRobotCallback.cpp  TestRobotCb.cpp  TestRobotCb.h  TestRobotImpl.cpp  TestRobotImpl.h  robotCommon.h
